--- a/board/v2/CHANGES.mkd
+++ b/board/v2/CHANGES.mkd
@@ -21,3 +21,8 @@ Started with STM32F030F4P6
  * Move to STM32G071 MCU (QFN-28)
  * Move to LMR23625 Buck converter
  * Add reverse polarity protection
+
+# July 30 (v5)
+
+ * Change TLV333 to use correct SC-70 package
+ * Fix values of Buck converter's bootstrap and bypass capacitors to 2.2uF
